--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: "Roboto", sans-serif;
-    
+    font-family: "Raleway", sans-serif;
+    color: #E7E9FC;
     background-color: white;
     
 }
