--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 body {
-    font-family: "Roboto", sans-serif;   
+    font-family: "Roboto", sans-serif;
+    color: #434455; 
+    background-color: #FFFFFF;
 }
 
 
@@ -11,3 +13,64 @@ ul, ol {
 }
 
 
+.logo-brand {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+}
+
+.logo-span {
+    color: #2e2f42;
+}
+
+address{
+    font-style: normal;
+}
+
+
+.team{
+    background-color: #F4F4FD;
+
+}
+.team-card{
+    background-color: #FFFFFF;
+}
+.team-name{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.prof-name{
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.title{
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: start;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+    
+    
+}
+
+
+.footer{
+    background-color: #2e2f42;
+}
+.txt-footer{
+    line-height: 1.5;
+    color: #F4F4FD;
+    letter-spacing: 0.02em;
+}
