--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,39 @@ ul, ol {
     list-style: none;
 }
 
+.nav-menu{
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.nav-menu:hover{
+    color: #404bbf;
+
+}
+
+.nav-menu:focus{
+    color: #404bbf;
+}
+
+
+.order-button{
+    background-color: #4D5AE5;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+.order-button:hover{
+    background-color: #404BBF;
+}
+
+.order-button:focus{
+    background-color: #404BBF;
+}
 
 .logo-brand {
     font-family: "Raleway", sans-serif;
@@ -30,6 +63,30 @@ ul, ol {
 address{
     font-style: normal;
 }
+
+.top-section{
+    background-color: #2e2f42;
+}
+
+.top-title{
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+
+
+}
+
+.title-1 {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+
+}
+
 .title-advantages{
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -71,6 +128,11 @@ address{
     text-align: center;
     
     
+}
+
+.title-portfolio{
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 
 
